alignment fixes to mock credit card

--- a/stylesheets/checkout.css
+++ b/stylesheets/checkout.css
@@ -14,9 +14,8 @@ h4, h3 {
     background-color: #ffffff;
     padding: 24px;
     border-radius: 14px;
-    
-    width: 50%;
     margin-left: 20px;
+    width: 100%;
 }
 
 #cardPreview {
@@ -24,8 +23,18 @@ h4, h3 {
     padding: 20px;
     border-radius: 14px;
     display: flex;
-    justify-content: flex-end;
+    width: 100%;
     align-items: flex-end;
+}
+
+#cardPreview > img {
+    margin-left: auto;
+}
+
+#cardPreview > div {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
 }
 
 #cardTitle {
@@ -61,4 +70,5 @@ h4, h3 {
     font-size: 23px;
     font-weight: 500;
     color: #ffffff;
+    margin-top: 32px;
 }
